translatable/tests/static/invalid_syntax.stderr
error: expected `,`
 --> tests/static/invalid_syntax.rs:5:13
  |
5 |     let _ = translation!("es");
  |             ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error: The path 'invalid.path' is not found in any of the translation files as a translation object.
  --> tests/static/invalid_syntax.rs:11:13
   |
11 |     let _ = translation!("es", static invalid::path);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: From<{integer}>` is not satisfied
 --> tests/static/invalid_syntax.rs:8:13
  |
8 |     let _ = translation!(42, static common::greeting);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `String`
  |
  = help: the following other types implement trait `From<T>`:
            `String` implements `From<&String>`
            `String` implements `From<&mut str>`
            `String` implements `From<&str>`
            `String` implements `From<Box<str>>`
            `String` implements `From<Cow<'_, str>>`
            `String` implements `From<char>`
  = note: required for `{integer}` to implement `Into<String>`
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)
